--- a/index.html
+++ b/index.html
@@ -313,10 +313,16 @@
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <div class="social-icons">
-                        <a href="#" class="text-white me-3"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="text-white me-3"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="text-white"><i class="fab fa-whatsapp"></i></a>
-                    </div>
+    <a href="https://www.facebook.com/evergreeninternationalschooltherkkupalayam/" target="_blank" class="text-white me-3">
+        <i class="fab fa-facebook-f"></i>
+    </a>
+    <a href="https://www.instagram.com/evergreen.campus/" target="_blank" class="text-white me-3">
+        <i class="fab fa-instagram"></i>
+    </a>
+    <a href="https://www.linkedin.com/company/evergreen-international-school-therkkupalayam/" target="_blank" class="text-white">
+        <i class="fab fa-linkedin-in"></i>
+    </a>
+</div>
                 </div>
             </div>
         </div>
