--- a/index.html
+++ b/index.html
@@ -312,14 +312,14 @@
                     <p class="small mb-0">&copy; 2026 Evergreen International School. All Rights Reserved.</p>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
-                    <div class="social-icons">
-    <a href="https://www.facebook.com/evergreeninternationalschooltherkkupalayam/" target="_blank" class="text-white me-3">
+                   <div class="social-icons">
+    <a href="https://www.facebook.com/evergreeninternationalschooltherkkupalayam/" target="_blank" class="text-white me-3 fs-2">
         <i class="fab fa-facebook-f"></i>
     </a>
-    <a href="https://www.instagram.com/evergreen.campus/" target="_blank" class="text-white me-3">
+    <a href="https://www.instagram.com/evergreen.campus/" target="_blank" class="text-white me-3 fs-2">
         <i class="fab fa-instagram"></i>
     </a>
-    <a href="https://www.linkedin.com/company/evergreen-international-school-therkkupalayam/" target="_blank" class="text-white">
+    <a href="https://www.linkedin.com/company/evergreen-international-school-therkkupalayam/" target="_blank" class="text-white fs-2">
         <i class="fab fa-linkedin-in"></i>
     </a>
 </div>
