--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <header id="home" class="hero">
         <div class="container">
             <h1>Nurturing Excellence, <br> Rooted in Values.</h1>
-            <p class="lead mb-4">Evergreen International School, Therkkupalayam — Where your child's future begins.</p>
+            <p class="lead mb-4">Evergreen International School, Therkkupalayam - Where your child's future begins.</p>
             <a href="#about" class="btn btn-custom btn-lg">Explore Our Vision</a>
         </div>
     </header>
@@ -164,7 +164,7 @@
                 </div>
                 <div class="col-lg-6 mt-4 mt-lg-0">
                     <h2 class="fw-bold mb-4" style="color: var(--primary-green);">Rooted Since 2015</h2>
-                    <p>Established with a mission to provide world-class education in the heart of Namakkal, Evergreen International Nursery and Primary School focuses on a child-centric learning approach.</p>
+                    <p>Established with a mission to provide world-class education in the heart of Namakkal, Evergreen International Nursery and Primary School focuses on a child centric learning approach.</p>
                     <p>We combine the rigor of the Tamil Nadu State Board curriculum with modern ICT tools, ensuring our 200+ students are prepared for the digital era while staying connected to their cultural heritage.</p>
                     <div class="row mt-4">
                         <div class="col-6">
