--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="#">EVERGREEN</a>
+            <a class="navbar-brand" href="#">EVERGREEN INTERNATIONAL SCHOOL</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
