--- a/index.html
+++ b/index.html
@@ -208,20 +208,28 @@
             <div class="section-title">
                 <h2>Our World-Class Facilities</h2>
                 <p>Designed to provide a safe and stimulating environment for growth.</p>
-            </div>
-            <div class="row g-4">
-                <div class="col-md-3">
-                    <div class="feature-card">
-                        <i class="fas fa-laptop-code feature-icon"></i>
-                        <h4>ICT Lab</h4>
-                        <p>Modern computing facilities to bridge the digital divide.</p>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="feature-card">
-                        <i class="fas fa-book-reader feature-icon"></i>
-                        <h4>Library</h4>
-                        <p>A curated collection of books to foster a lifelong love for reading.</p>
+           <div class="col-lg-5">
+                    <div class="p-4 rounded-3 shadow-sm bg-white h-100">
+                        <h4 class="mb-4">Contact Information</h4>
+                        <div class="d-flex mb-3">
+                            <i class="fas fa-map-marker-alt me-3 mt-1 text-success"></i>
+                            <p>Alangadu, Vediyarasam Palayam Road, Therkkupalayam, Namakkal, TN – 638006.</p>
+                        </div>
+                        <div class="d-flex mb-3">
+                            <i class="fas fa-phone-alt me-3 mt-1 text-success"></i>
+                            <p>+91 98427 12666<br>+91 98427 12912</p>
+                        </div>
+                        <div class="d-flex mb-4">
+                            <i class="fas fa-envelope me-3 mt-1 text-success"></i>
+                            <p>support@evergreen-school.in</p>
+                        </div>
+                        
+                        <div class="rounded-3 overflow-hidden shadow-sm" style="height: 250px;">
+                            <iframe 
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3911.696122606822!2d77.82270967590453!3d11.35623044819777!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba967a39694c1bb%3A0x82ae56ece5cb9e9!2sEvergreen%20International%20School!5e0!3m2!1sen!2sin!4v1706650000000!5m2!1sen!2sin" 
+                                width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                            </iframe>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-3">
