--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                         <h4 class="mb-4">Contact Information</h4>
                         <div class="d-flex mb-3">
                             <i class="fas fa-map-marker-alt me-3 mt-1 text-success"></i>
-                            <p>Alangadu, Vediyarasam Palayam Road, Therkkupalayam, Namakkal, TN – 638006.</p>
+                            <p>Alangadu, Vediyarasampalayam Road, Therkkupalayam, Pallipalayam, Namakkal (DT), Erode - 638008, Tamil Nadu.</p>
                         </div>
                         <div class="d-flex mb-3">
                             <i class="fas fa-phone-alt me-3 mt-1 text-success"></i>
