--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <header id="home" class="hero">
         <div class="container">
             <h1>Nurturing Excellence, <br> Rooted in Values.</h1>
-            <p class="lead mb-4">Evergreen International School, Therkkupalayam - Where your child's future begins.</p>
+            <p class="lead mb-4">Evergreen International School, Therkkupalayam — Where your child's future begins.</p>
             <a href="#about" class="btn btn-custom btn-lg">Explore Our Vision</a>
         </div>
     </header>
@@ -164,7 +164,7 @@
                 </div>
                 <div class="col-lg-6 mt-4 mt-lg-0">
                     <h2 class="fw-bold mb-4" style="color: var(--primary-green);">Rooted Since 2015</h2>
-                    <p>Established with a mission to provide world-class education in the heart of Namakkal, Evergreen International Nursery and Primary School focuses on a child centric learning approach.</p>
+                    <p>Established with a mission to provide world-class education in the heart of Namakkal, Evergreen International Nursery and Primary School focuses on a child-centric learning approach.</p>
                     <p>We combine the rigor of the Tamil Nadu State Board curriculum with modern ICT tools, ensuring our 200+ students are prepared for the digital era while staying connected to their cultural heritage.</p>
                     <div class="row mt-4">
                         <div class="col-6">
@@ -199,7 +199,7 @@
                         </div>
                     </div>
                 </div>
-                </div>
+            </div>
         </div>
     </section>
 
@@ -208,28 +208,20 @@
             <div class="section-title">
                 <h2>Our World-Class Facilities</h2>
                 <p>Designed to provide a safe and stimulating environment for growth.</p>
-           <div class="col-lg-5">
-                    <div class="p-4 rounded-3 shadow-sm bg-white h-100">
-                        <h4 class="mb-4">Contact Information</h4>
-                        <div class="d-flex mb-3">
-                            <i class="fas fa-map-marker-alt me-3 mt-1 text-success"></i>
-                            <p>Alangadu, Vediyarasam Palayam Road, Therkkupalayam, Namakkal, TN – 638006.</p>
-                        </div>
-                        <div class="d-flex mb-3">
-                            <i class="fas fa-phone-alt me-3 mt-1 text-success"></i>
-                            <p>+91 98427 12666<br>+91 98427 12912</p>
-                        </div>
-                        <div class="d-flex mb-4">
-                            <i class="fas fa-envelope me-3 mt-1 text-success"></i>
-                            <p>support@evergreen-school.in</p>
-                        </div>
-                        
-                        <div class="rounded-3 overflow-hidden shadow-sm" style="height: 250px;">
-                            <iframe 
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3911.696122606822!2d77.82270967590453!3d11.35623044819777!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba967a39694c1bb%3A0x82ae56ece5cb9e9!2sEvergreen%20International%20School!5e0!3m2!1sen!2sin!4v1706650000000!5m2!1sen!2sin" 
-                                width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-                            </iframe>
-                        </div>
+            </div>
+            <div class="row g-4">
+                <div class="col-md-3">
+                    <div class="feature-card">
+                        <i class="fas fa-laptop-code feature-icon"></i>
+                        <h4>ICT Lab</h4>
+                        <p>Modern computing facilities to bridge the digital divide.</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="feature-card">
+                        <i class="fas fa-book-reader feature-icon"></i>
+                        <h4>Library</h4>
+                        <p>A curated collection of books to foster a lifelong love for reading.</p>
                     </div>
                 </div>
                 <div class="col-md-3">
@@ -258,19 +250,26 @@
             </div>
             <div class="row g-5">
                 <div class="col-lg-5">
-                    <div class="p-4 rounded-3 shadow-sm bg-white">
+                    <div class="p-4 rounded-3 shadow-sm bg-white h-100">
                         <h4 class="mb-4">Contact Information</h4>
                         <div class="d-flex mb-3">
                             <i class="fas fa-map-marker-alt me-3 mt-1 text-success"></i>
-                            <p>Alangadu, Vediyarasampalayam Road, Therkkupalayam, Pallipalayam, Namakkal (DT), Erode - 638008, Tamil Nadu.</p>
+                            <p>Near Water Tank, Vediyarasampalayam Road, Therkkupalayam, Pallipalayam, Namakkal - 638006.</p>
                         </div>
                         <div class="d-flex mb-3">
                             <i class="fas fa-phone-alt me-3 mt-1 text-success"></i>
                             <p>+91 98427 12666<br>+91 98427 12912</p>
                         </div>
-                        <div class="d-flex mb-3">
+                        <div class="d-flex mb-4">
                             <i class="fas fa-envelope me-3 mt-1 text-success"></i>
                             <p>support@evergreen-school.in</p>
+                        </div>
+                        
+                        <div class="rounded-3 overflow-hidden shadow-sm" style="height: 250px;">
+                            <iframe 
+                                src="https://www.google.com/maps?q=Evergreen%20International%20School%20Pallipalayam&output=embed" 
+                                width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy">
+                            </iframe>
                         </div>
                     </div>
                 </div>
