--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#tour">Tour</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#blog">Blog</a></li>
+                    <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
                     <li class="nav-item"><a class="nav-link" href="#facilities">Facilities</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                 </ul>
@@ -128,7 +128,7 @@
     <header id="home" class="hero">
         <div class="container">
             <h1>Nurturing Excellence, <br> Rooted in Values.</h1>
-            <p class="lead mb-4">Evergreen International School, Pallipalayam — Your child's future begins here.</p>
+            <p class="lead mb-4">Evergreen International School, Pallipalayam - Your child's future begins here.</p>
             <a href="#about" class="btn btn-custom btn-lg">Explore Our Vision</a>
         </div>
     </header>
@@ -182,7 +182,7 @@
                             <h5 class="fw-bold">Welcome to Our New Website</h5>
                             <p class="text-muted small">Feb 3, 2026</p>
                             <p>We are thrilled to launch our new digital home for parents and students...</p>
-                            <a href="#" class="text-success fw-bold text-decoration-none">Read Full Post →</a>
+                            <a href="blog.html" class="text-success fw-bold text-decoration-none">Read Full Post →</a>
                         </div>
                     </div>
                 </div>
@@ -238,7 +238,7 @@
                         <div class="accordion-item">
                             <h2 class="accordion-header"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#c2">Where is the school situated?</button></h2>
                             <div id="c2" class="accordion-collapse collapse" data-bs-parent="#schoolFAQ">
-                                <div class="accordion-body">We are on Vediyarasampalayam Road in **Pallipalayam**, situated just after **Therkkupalayam**, Namakkal.</div>
+                                <div class="accordion-body">We are located Near Water Tank, Vediyarasampalayam Road, Therkkupalayam, Pallipalayam, Namakkal(DT), Erode - 638008, Tamil Nadu.</div>
                             </div>
                         </div>
                     </div>
@@ -254,11 +254,11 @@
                 <div class="col-lg-5">
                     <div class="p-4 rounded-3 shadow-sm bg-white h-100 border">
                         <h4 class="mb-4">Contact Information</h4>
-                        <p><i class="fas fa-map-marker-alt text-success me-2"></i> Vediyarasampalayam Road, Pallipalayam, Namakkal - 638006.</p>
+                        <p><i class="fas fa-map-marker-alt text-success me-2"></i> Near Water Tank, Vediyarasampalayam Road, Therkkupalayam, Pallipalayam, Namakkal(DT), Erode - 638008, Tamil Nadu.</p>
                         <p><i class="fas fa-phone-alt text-success me-2"></i> +91 98427 12666</p>
                         <p><i class="fas fa-envelope text-success me-2"></i> support@evergreen-school.in</p>
                         <div class="rounded-3 overflow-hidden mt-4" style="height: 250px;">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3912.182476545224!2d77.78505517409536!3d11.321307648931112!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba967a36e948bbb%3A0x1aae56d5dedb9e49!2sEvergreen%20International%20School!5e0!3m2!1sen!2sin!4v1738541818296!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                            <iframe src="https://www.google.com/maps/embed/v1/place?key=YOUR_API_KEY&q=Evergreen+International+School+Pallipalayam1" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
                     </div>
                 </div>
