--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     
     <style>
-        /* --- Brand Colors & Global Styles --- */
         :root {
             --primary-green: #2d6a4f;
             --secondary-green: #52b788;
@@ -93,7 +92,7 @@
             color: white;
         }
 
-        /* --- Interactive Flip Cards (Like Stanes School) --- */
+        /* --- Interactive Flip Cards --- */
         .facility-card {
             perspective: 1000px;
             height: 320px;
@@ -128,9 +127,7 @@
             box-shadow: 0 10px 30px rgba(0,0,0,0.05);
         }
 
-        .facility-front {
-            background: white;
-        }
+        .facility-front { background: white; }
 
         .facility-back {
             background: var(--primary-green);
@@ -147,9 +144,7 @@
 
         /* --- Section Titles --- */
         section { padding: 100px 0; }
-
         .section-title { text-align: center; margin-bottom: 70px; }
-
         .section-title h2 {
             font-weight: 700;
             color: var(--primary-green);
@@ -157,19 +152,12 @@
             padding-bottom: 20px;
             display: inline-block;
         }
-
         .section-title h2::after {
-            content: '';
-            width: 70px;
-            height: 4px;
-            background: var(--accent-orange);
-            position: absolute;
-            bottom: 0;
-            left: 50%;
-            transform: translateX(-50%);
+            content: ''; width: 70px; height: 4px; background: var(--accent-orange);
+            position: absolute; bottom: 0; left: 50%; transform: translateX(-50%);
         }
 
-        /* --- Cards & Content --- */
+        /* --- Content Cards --- */
         .content-card {
             border: none;
             border-radius: 20px;
@@ -179,9 +167,7 @@
             padding: 40px;
         }
 
-        @media (max-width: 768px) {
-            .hero h1 { font-size: 2.5rem; }
-        }
+        @media (max-width: 768px) { .hero h1 { font-size: 2.5rem; } }
     </style>
 </head>
 <body>
@@ -225,20 +211,9 @@
                         <h2 class="fw-bold mb-4" style="color: var(--primary-green);">CBSE Excellence Since 2015</h2>
                         <p class="lead text-muted">Dedicated to providing world-class education through the CBSE syllabus.</p>
                         <p>We combine high academic standards with modern ICT tools, ensuring our **200+ students** are prepared for a global future while staying connected to their roots.</p>
-                        
                         <div class="row mt-5 text-center g-4">
-                            <div class="col-6">
-                                <div class="p-3 border rounded-3">
-                                    <h3 class="fw-bold mb-0" style="color: var(--accent-orange);">200+</h3>
-                                    <small class="text-uppercase fw-bold text-muted">Active Students</small>
-                                </div>
-                            </div>
-                            <div class="col-6">
-                                <div class="p-3 border rounded-3">
-                                    <h3 class="fw-bold mb-0" style="color: var(--accent-orange);">100%</h3>
-                                    <small class="text-uppercase fw-bold text-muted">Dedication</small>
-                                </div>
-                            </div>
+                            <div class="col-6"><div class="p-3 border rounded-3"><h3 class="fw-bold mb-0" style="color: var(--accent-orange);">200+</h3><small class="text-uppercase fw-bold text-muted">Active Students</small></div></div>
+                            <div class="col-6"><div class="p-3 border rounded-3"><h3 class="fw-bold mb-0" style="color: var(--accent-orange);">100%</h3><small class="text-uppercase fw-bold text-muted">Dedication</small></div></div>
                         </div>
                     </div>
                 </div>
@@ -264,9 +239,7 @@
 
     <section id="blog">
         <div class="container">
-            <div class="section-title" data-aos="fade-up">
-                <h2>School Blog & Updates</h2>
-            </div>
+            <div class="section-title" data-aos="fade-up"><h2>School Blog & Updates</h2></div>
             <div class="row g-4">
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="content-card">
@@ -318,9 +291,7 @@
 
     <section id="faq" style="background-color: var(--light-bg);">
         <div class="container">
-            <div class="section-title" data-aos="fade-up">
-                <h2>Frequently Asked Questions</h2>
-            </div>
+            <div class="section-title" data-aos="fade-up"><h2>Frequently Asked Questions</h2></div>
             <div class="row justify-content-center">
                 <div class="col-lg-8" data-aos="fade-up">
                     <div class="accordion shadow-sm rounded-4 overflow-hidden border-0" id="schoolFAQ">
@@ -349,10 +320,10 @@
                     <div class="content-card h-100 border">
                         <h4 class="fw-bold mb-4">Contact Details</h4>
                         <div class="d-flex mb-3"><i class="fas fa-map-marker-alt text-success me-3 mt-1"></i><p>Near Water Tank, Vediyarasampalayam Road, Therkkupalayam, Pallipalayam, Namakkal(DT), Erode - 638008.</p></div>
-                        <div class="d-flex mb-3"><i class="fas fa-phone-alt text-success me-3 mt-1"></i><p>+91 98427 12666</p></div>
+                        <div class="d-flex mb-3"><i class="fas fa-phone-alt text-success me-2 mt-1"></i><p>+91 98427 12666</p></div>
                         <div class="d-flex mb-4"><i class="fas fa-envelope text-success me-3 mt-1"></i><p>support@evergreen-school.in</p></div>
                         <div class="rounded-4 overflow-hidden border shadow-sm" style="height: 250px;">
-                            <iframe src="https://www.google.com/maps?q=Evergreen%20International%20School%20Pallipalayam&output=embed1" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                            <iframe src="https://maps.google.com/maps/contrib/115001270106857640331" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
                     </div>
                 </div>
@@ -384,10 +355,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
-        // Start AOS Animations
         AOS.init({ once: true, duration: 1000, offset: 150 });
-
-        // Smooth Scrolling Logic
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
                 e.preventDefault();
