--- a/index.html
+++ b/index.html
@@ -321,6 +321,9 @@
                     <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#academics">Academics</a></li>
+                    
+                    <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
+                    
                     <li class="nav-item"><a class="nav-link" href="#admissions">Admissions</a></li>
                     <li class="nav-item"><a class="nav-link" href="#notice-board">Notices</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
