--- a/index.html
+++ b/index.html
@@ -238,15 +238,6 @@
             font-size: 1.3rem;
         }
 
-        /* --- Notice Board Frame --- */
-        .notice-frame {
-            border: 1px solid rgba(31,95,74,0.2);
-            border-radius: 15px;
-            overflow: hidden;
-            background: #fff;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.08);
-        }
-
         /* --- Section Titles --- */
         .section-title {
             text-align: center;
@@ -321,11 +312,8 @@
                     <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#academics">Academics</a></li>
-                    
                     <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
-                    
                     <li class="nav-item"><a class="nav-link" href="#admissions">Admissions</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#notice-board">Notices</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                 </ul>
                 <a href="#contact" class="btn btn-custom ms-lg-3">Enquiry</a>
@@ -407,24 +395,7 @@
         </div>
     </section>
 
-    <section id="notice-board">
-        <div class="container">
-            <div class="section-title" data-aos="fade-up">
-                <h2>Notice Board</h2>
-                <p>Important circulars and updates for parents and staff.</p>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-lg-10" data-aos="fade-up">
-                    <div class="notice-frame">
-                        <iframe title="Evergreen Notice Board" src="https://drive.google.com/file/d/1B6J8sQ8w9z.../preview" width="100%" height="480" style="border:0;" loading="lazy"></iframe>
-                    </div>
-                    <p class="text-muted mt-3 text-center small">If the notice board does not appear, please contact the school office.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="academics" class="highlight-section">
+    <section id="academics">
         <div class="container">
             <div class="section-title" data-aos="fade-up">
                 <h2>Academics</h2>
@@ -457,7 +428,7 @@
         </div>
     </section>
 
-    <section id="admissions">
+    <section id="admissions" class="highlight-section">
         <div class="container">
             <div class="section-title" data-aos="fade-up">
                 <h2>Admissions</h2>
@@ -490,7 +461,7 @@
         </div>
     </section>
 
-    <section id="infrastructure" class="highlight-section">
+    <section id="infrastructure">
         <div class="container">
             <div class="section-title" data-aos="fade-up">
                 <h2>Infrastructure</h2>
@@ -522,7 +493,7 @@
         </div>
     </section>
 
-    <section id="leadership">
+    <section id="leadership" class="highlight-section">
         <div class="container">
             <div class="section-title" data-aos="fade-up">
                 <h2>Leadership</h2>
@@ -539,24 +510,6 @@
                         <h5 class="fw-bold mb-3">Correspondent’s Message</h5>
                         <p class="text-muted">"We established this school to provide a strong, caring start to education. We focus on values, discipline, and active parent involvement to help every child grow."</p>
                         <p class="mt-2 mb-0 fw-bold">- Mr. Raja A P, Correspondent</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="disclosure" class="highlight-section">
-        <div class="container">
-            <div class="section-title" data-aos="fade-up">
-                <h2>Mandatory Public Disclosure</h2>
-                <p>Transparency as per CBSE norms.</p>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-lg-8" data-aos="fade-up">
-                    <div class="content-card text-center">
-                        <div class="icon-circle mb-3"><i class="fas fa-file-alt"></i></div>
-                        <h5 class="fw-bold">Public Records</h5>
-                        <p class="text-muted">We maintain clear records regarding school address, affiliation status, fees, staff details, and infrastructure as required by state and central norms.</p>
                     </div>
                 </div>
             </div>
