--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
         }
 
         body {
-            font-family: 'Nunito', sans-serif; /* Human, rounded, readable */
+            font-family: 'Nunito', sans-serif;
             color: var(--text);
-            line-height: 1.5;
+            line-height: 1.6;
             background-color: var(--bg);
             overflow-x: hidden;
         }
 
         h1, h2, h3, h4, h5, h6 {
-            font-family: 'Poppins', sans-serif; /* Professional, friendly */
+            font-family: 'Poppins', sans-serif;
             color: var(--brand-green);
             line-height: 1.3;
         }
@@ -102,7 +102,6 @@
 
         /* --- Hero Section --- */
         .hero {
-            /* Using Brand Green with overlay */
             background: linear-gradient(110deg, rgba(47, 107, 58, 0.92), rgba(127, 183, 126, 0.8)),
                         url('https://images.unsplash.com/photo-1544717305-2782549b5136?auto=format&fit=crop&w=1600&q=80');
             background-size: cover;
@@ -115,7 +114,7 @@
         .hero-content { position: relative; z-index: 2; }
         
         .hero h1 {
-            color: #ffffff; /* Override brand green for Hero text */
+            color: #ffffff;
             font-size: 3.5rem;
             font-weight: 800;
             margin-bottom: 20px;
@@ -153,7 +152,6 @@
         .hero-card h4 { color: white; margin-bottom: 0; }
 
         /* --- Brand Buttons --- */
-        /* Primary Button */
         .btn-custom {
             background-color: var(--brand-green);
             color: white;
@@ -168,14 +166,14 @@
             min-height: 44px;
             display: inline-flex;
             align-items: center;
+            justify-content: center;
         }
         .btn-custom:hover {
-            background-color: #24522c; /* Slightly darker shade for hover */
+            background-color: #24522c;
             transform: translateY(-2px);
             color: white;
         }
 
-        /* Secondary Button Style (used for 'Schedule a Visit') */
         .btn-outline-light {
             background-color: transparent;
             border: 2px solid white;
@@ -201,7 +199,7 @@
             border-radius: var(--radius-md);
             background: var(--card);
             box-shadow: var(--shadow-s);
-            padding: 24px;
+            padding: 30px;
             height: 100%;
             transition: 0.3s;
         }
@@ -215,7 +213,7 @@
             display: inline-flex;
             align-items: center;
             gap: 8px;
-            background: rgba(126, 200, 227, 0.2); /* Sky Blue Tint */
+            background: rgba(126, 200, 227, 0.2);
             color: var(--brand-green);
             padding: 6px 16px;
             border-radius: var(--radius-pill);
@@ -224,10 +222,10 @@
             font-size: 0.85rem;
         }
 
-        .list-check { list-style: none; padding-left: 0; }
+        .list-check { list-style: none; padding-left: 0; margin-bottom: 0; }
         .list-check li { margin-bottom: 12px; display: flex; gap: 10px; color: var(--text); }
         .list-check li i {
-            color: var(--leaf-green); /* Leaf Green for icons */
+            color: var(--leaf-green);
             margin-top: 5px;
         }
 
@@ -242,7 +240,7 @@
             content: '';
             width: 60px;
             height: 4px;
-            background: var(--accent-yellow); /* Warm Yellow Underline */
+            background: var(--accent-yellow);
             position: absolute;
             bottom: 0;
             left: 50%;
@@ -263,7 +261,7 @@
             width: 44px;
             height: 44px;
             border-radius: 50%;
-            background: rgba(127, 183, 126, 0.15); /* Leaf green tint */
+            background: rgba(127, 183, 126, 0.15);
             display: inline-flex;
             align-items: center;
             justify-content: center;
@@ -323,7 +321,7 @@
                 <span class="hero-badge"><i class="fas fa-child me-2"></i>Pre-KG to Grade 5</span>
             </div>
             <h1>Welcome to Evergreen International School</h1>
-            <p class="hero-subtitle mb-5 mx-auto mx-lg-0">Evergreen International School is a CBSE-aligned, English-medium, co-educational school in Therkkupalayam, Pallipalayam, Erode District.</p>
+            <p class="hero-subtitle mb-5 mx-auto mx-lg-0">Evergreen International School is a CBSE-aligned, English-medium, co-educational school in Therkkupalayam, Pallipalayam, Erode District. We focus on academic excellence, character development, and holistic growth in a safe, supportive environment.</p>
             <div class="d-flex flex-wrap justify-content-center justify-content-lg-start gap-3">
                 <a href="#about" class="btn btn-custom btn-lg">Explore Our Vision</a>
                 <a href="#contact" class="btn btn-outline-light btn-lg">Schedule a Visit</a>
@@ -346,16 +344,19 @@
                     <div class="ps-lg-5">
                         <span class="pill mb-3"><i class="fas fa-school"></i>School Overview</span>
                         <h2 class="fw-bold mb-4">Strong foundations for lifelong learning.</h2>
+                        <p class="lead text-muted mb-4">Evergreen International School provides quality primary education rooted in strong values and modern teaching practices, aligned with the CBSE curriculum framework.</p>
+                        
                         <div class="content-card mb-4">
                             <h5 class="fw-bold">Vision</h5>
-                            <p class="text-muted mb-0">To provide holistic education that nurtures intellectual, physical, emotional, and moral development.</p>
+                            <p class="text-muted mb-0">To provide holistic education that nurtures intellectual, physical, emotional, and moral development, enabling students to become responsible global citizens.</p>
                         </div>
                         <div class="content-card">
                             <h5 class="fw-bold">Mission</h5>
                             <ul class="list-check">
-                                <li><i class="fas fa-check-circle"></i>CBSE-aligned framework.</li>
-                                <li><i class="fas fa-check-circle"></i>Critical thinking and creativity.</li>
-                                <li><i class="fas fa-check-circle"></i>Safe, inclusive environment.</li>
+                                <li><i class="fas fa-check-circle"></i>Deliver CBSE-aligned education with strong foundational learning.</li>
+                                <li><i class="fas fa-check-circle"></i>Encourage conceptual understanding and critical thinking.</li>
+                                <li><i class="fas fa-check-circle"></i>Create a safe, inclusive, and disciplined learning environment.</li>
+                                <li><i class="fas fa-check-circle"></i>Foster values, creativity, and social responsibility.</li>
                             </ul>
                         </div>
                     </div>
@@ -377,7 +378,8 @@
                         <ul class="list-check text-start">
                             <li><i class="fas fa-check-circle"></i>Activity-based learning.</li>
                             <li><i class="fas fa-check-circle"></i>Visual and audio teaching aids.</li>
-                            <li><i class="fas fa-check-circle"></i>Continuous assessment.</li>
+                            <li><i class="fas fa-check-circle"></i>Interactive classroom practices.</li>
+                            <li><i class="fas fa-check-circle"></i>Continuous assessment and observation.</li>
                         </ul>
                     </div>
                 </div>
@@ -385,9 +387,10 @@
                     <div class="content-card">
                         <h5 class="fw-bold mb-3">Primary Classes (Grades 1-5)</h5>
                         <ul class="list-check text-start">
-                            <li><i class="fas fa-check-circle"></i>English, Mathematics, Science.</li>
-                            <li><i class="fas fa-check-circle"></i>Computer Education.</li>
-                            <li><i class="fas fa-check-circle"></i>Physical Education & Arts.</li>
+                            <li><i class="fas fa-check-circle"></i>English, Mathematics, Environmental Studies / Science.</li>
+                            <li><i class="fas fa-check-circle"></i>Social Studies, General Knowledge.</li>
+                            <li><i class="fas fa-check-circle"></i>Computer Education, Art and Craft.</li>
+                            <li><i class="fas fa-check-circle"></i>Physical Education.</li>
                         </ul>
                     </div>
                 </div>
@@ -399,21 +402,86 @@
         <div class="container text-center">
             <div class="section-title" data-aos="fade-up">
                 <h2>Admissions</h2>
-                <p>Open for Pre-KG to Grade 5 based on seat availability.</p>
+                <p>Admissions are open for Pre-KG to Grade 5 based on seat availability and age eligibility.</p>
             </div>
             <div class="row g-4">
-                <div class="col-lg-6" data-aos="fade-right"><div class="content-card text-start"><h5 class="fw-bold mb-3">Process</h5><p>Enquiry, form submission, document verification, and confirmation.</p></div></div>
-                <div class="col-lg-6" data-aos="fade-left"><div class="content-card text-start"><h5 class="fw-bold mb-3">Documents</h5><p>Birth Certificate, Photos, TC (for Grade 2+), and Aadhaar.</p></div></div>
+                <div class="col-lg-6" data-aos="fade-right">
+                    <div class="content-card text-start">
+                        <h5 class="fw-bold mb-3">Admission Process</h5>
+                        <ul class="list-check">
+                            <li><i class="fas fa-check-circle"></i>Enquiry and interaction with school authorities.</li>
+                            <li><i class="fas fa-check-circle"></i>Submission of application form.</li>
+                            <li><i class="fas fa-check-circle"></i>Verification of documents.</li>
+                            <li><i class="fas fa-check-circle"></i>Confirmation of admission.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-6" data-aos="fade-left">
+                    <div class="content-card text-start">
+                        <h5 class="fw-bold mb-3">Documents Required</h5>
+                        <ul class="list-check">
+                            <li><i class="fas fa-check-circle"></i>Birth Certificate.</li>
+                            <li><i class="fas fa-check-circle"></i>Passport-size photographs.</li>
+                            <li><i class="fas fa-check-circle"></i>Transfer Certificate (for Grades 2 and above).</li>
+                            <li><i class="fas fa-check-circle"></i>Aadhaar copy (optional).</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 
-    <section id="leadership">
+    <section id="infrastructure">
+        <div class="container">
+            <div class="section-title" data-aos="fade-up">
+                <h2>Infrastructure</h2>
+                <p>A safe, hygienic, and child-friendly campus with essential facilities.</p>
+            </div>
+            <div class="row g-4">
+                <div class="col-md-6" data-aos="fade-up">
+                    <div class="content-card">
+                        <h5 class="fw-bold mb-3">Facilities</h5>
+                        <ul class="list-check">
+                            <li><i class="fas fa-check-circle"></i>Spacious and ventilated classrooms.</li>
+                            <li><i class="fas fa-check-circle"></i>Library with age-appropriate books.</li>
+                            <li><i class="fas fa-check-circle"></i>Outdoor play area.</li>
+                            <li><i class="fas fa-check-circle"></i>Smart classroom support.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
+                    <div class="content-card">
+                        <h5 class="fw-bold mb-3">Health & Safety</h5>
+                        <ul class="list-check">
+                            <li><i class="fas fa-check-circle"></i>Regular medical check-ups.</li>
+                            <li><i class="fas fa-check-circle"></i>Child-safe campus environment.</li>
+                            <li><i class="fas fa-check-circle"></i>Clean drinking water & sanitation.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="leadership" class="highlight-section">
         <div class="container">
             <div class="section-title" data-aos="fade-up"><h2>Leadership</h2></div>
             <div class="row g-4">
-                <div class="col-lg-6" data-aos="fade-right"><div class="content-card"><h5>Principal’s Message</h5><p class="text-muted">"We aim to nurture happy learners and responsible individuals."</p></div></div>
-                <div class="col-lg-6" data-aos="fade-left"><div class="content-card"><h5>Correspondent’s Message</h5><p class="text-muted">"Focus on values, discipline, and active parent involvement."</p><p class="fw-bold text-success">- Mr. Raja A P</p></div></div>
+                <div class="col-lg-6" data-aos="fade-right">
+                    <div class="content-card">
+                        <h5 class="fw-bold mb-3">Principal’s Message</h5>
+                        <p class="text-muted">"At Evergreen International School, we understand that the early years of a child’s education are the most important. These years shape not only academic ability, but also confidence, curiosity, and character."</p>
+                        <p class="text-muted">"Our teachers are committed to guiding each child with patience and dedication, while working closely with parents to support every learner’s individual growth. We aim to create a joyful learning experience that prepares children for future academic stages with confidence."</p>
+                    </div>
+                </div>
+                <div class="col-lg-6" data-aos="fade-left">
+                    <div class="content-card">
+                        <h5 class="fw-bold mb-3">Correspondent’s Message</h5>
+                        <p class="text-muted">"Evergreen International School was established with a simple and sincere purpose: to provide young children with a strong, caring, and meaningful start to their educational journey."</p>
+                        <p class="text-muted">"Our commitment is to continuously improve our educational practices and facilities, ensuring that every child at Evergreen International School feels safe, valued, and encouraged to grow."</p>
+                        <p class="fw-bold text-success mt-3">- Mr. Raja A P, Correspondent</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -425,7 +493,7 @@
                 <div class="col-lg-5" data-aos="fade-right">
                     <div class="content-card h-100">
                         <h4 class="fw-bold mb-4">Get in Touch</h4>
-                        <p><i class="fas fa-map-marker-alt text-success me-2"></i> Pallipalayam, Namakkal(DT), Erode - 638008.</p>
+                        <p><i class="fas fa-map-marker-alt text-success me-2"></i> Near Water Tank, Vediyarasampalayam Road, Therkkupalayam, Pallipalayam, Namakkal(DT), Erode - 638008.</p>
                         <p><i class="fas fa-phone-alt text-success me-2"></i> +91 98427 12666</p>
                         <p><i class="fas fa-envelope text-success me-2"></i> support@evergreen-school.in</p>
                         <div class="rounded overflow-hidden mt-4" style="height: 200px;">
@@ -438,6 +506,7 @@
                         <div class="row g-3">
                             <div class="col-md-6"><input type="text" name="name" class="form-control" placeholder="Name" required></div>
                             <div class="col-md-6"><input type="email" name="email" class="form-control" placeholder="Email" required></div>
+                            <div class="col-12"><input type="text" name="phone" class="form-control" placeholder="Phone Number" required></div>
                             <div class="col-12"><textarea name="message" class="form-control" rows="5" placeholder="Admission Enquiry" required></textarea></div>
                             <div class="col-12"><button type="submit" class="btn btn-custom w-100">Send Message</button></div>
                         </div>
