--- a/index.html
+++ b/index.html
@@ -512,21 +512,21 @@
                     <div class="testimonial-card">
                         <i class="fas fa-quote-left quote-icon"></i>
                         <p class="mb-4 text-muted">"The focus on values and discipline at Evergreen is exactly what we were looking for. My child loves going to school every day."</p>
-                        <h6 class="fw-bold" style="color: var(--brand-green);">— Parent of Grade 2 Student</h6>
+                        <h6 class="fw-bold" style="color: var(--brand-green);"> </h6>
                     </div>
                 </div>
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="testimonial-card">
                         <i class="fas fa-quote-left quote-icon"></i>
                         <p class="mb-4 text-muted">"A wonderful environment for early learners. The teachers are very caring and the new facilities are excellent."</p>
-                        <h6 class="fw-bold" style="color: var(--brand-green);">— Parent of KG Student</h6>
+                        <h6 class="fw-bold" style="color: var(--brand-green);"> </h6>
                     </div>
                 </div>
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="testimonial-card">
                         <i class="fas fa-quote-left quote-icon"></i>
                         <p class="mb-4 text-muted">"We have seen remarkable improvement in our son's confidence. The activity-based learning approach really works."</p>
-                        <h6 class="fw-bold" style="color: var(--brand-green);">— Parent of Grade 4 Student</h6>
+                        <h6 class="fw-bold" style="color: var(--brand-green);"> </h6>
                     </div>
                 </div>
             </div>
@@ -549,7 +549,7 @@
                         <h5 class="fw-bold mb-3">Correspondent’s Message</h5>
                         <p class="text-muted">"Evergreen International School was established with a simple and sincere purpose: to provide young children with a strong, caring, and meaningful start to their educational journey."</p>
                         <p class="text-muted">"Our commitment is to continuously improve our educational practices and facilities, ensuring that every child at Evergreen International School feels safe, valued, and encouraged to grow."</p>
-                        <p class="fw-bold text-success mt-3">- Mr. Raja A P, Correspondent</p>
+                        <p class="fw-bold text-success mt-3"> </p>
                     </div>
                 </div>
             </div>
@@ -564,7 +564,7 @@
                     <div class="content-card h-100">
                         <h4 class="fw-bold mb-4">Get in Touch</h4>
                         <p><i class="fas fa-map-marker-alt text-success me-2"></i> Near Water Tank, Vediyarasampalayam Road, Therkkupalayam, Pallipalayam, Namakkal(DT), Erode - 638008.</p>
-                        <p><i class="fas fa-phone-alt text-success me-2"></i> +91 98427 12666</p>
+                        <p><i class="fas fa-phone-alt text-success me-2"></i> +91 98427 12666, 98427 12912, 99767 98007</p>
                         <p><i class="fas fa-envelope text-success me-2"></i> support@evergreen-school.in</p>
                         <div class="rounded overflow-hidden mt-4 shadow-sm" style="height: 250px;">
                             <iframe src="https://maps.google.com/maps?q=Evergreen+International+School+Pallipalayam+Erode&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
